--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - 3.6
   - 3.7
   - 3.8
-#  - 3.9-dev
+#  - 3.9-dev  # 13 minutes to fail, pandas compile error
 #  - nightly
 
 matrix:
@@ -19,6 +19,15 @@ matrix:
     arch: arm64
   - python: 3.8
     arch: s390x
+  - name: "OSX"
+    os: osx
+    osx_image: xcode12  # 10.15.5
+    language: shell
+    install:
+      # for osx we can't say "python: 3.8" so we use the system python3
+      - python3 --version
+      - pip3 install .
+      - pip3 install .[test]
   include:
 #  - python: 3.8  # very slow, 38 minutes to pass
 #    arch: arm64
@@ -29,9 +38,24 @@ matrix:
 #    - pip install .[test]
 #  - python: 3.8
 #    arch: s390x
+  - name: "OSX"
+    os: osx
+    osx_image: xcode12  # 10.15.5
+    language: shell
+    install:
+      # for osx we can't say "python: 3.8" so we use the system python3
+      - python3 --version
+      - pip3 install .
+      - pip3 install .[test]
 
 git:
   depth: 99999
+
+before_install:
+  # temporary workaround for s390x and arm64 permissions problem
+  # https://travis-ci.community/t/permission-issue-while-building-wheels-for-various-python-packages/7822/12
+  - sudo mkdir -p ~/.cache/pip/wheels  # does not exist on osx
+  - sudo chown -Rv $USER:$GROUP ~/.cache/pip/wheels
 
 install:
   - pip install .
