--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,11 @@ matrix:
   include:
 #  - python: 3.8  # very slow, 38 minutes to pass
 #    arch: arm64
-#  - python: 3.9-dev  # very slow, 13 minutes to fail
-#    install:
-#    - pip install cython  # needed for pandas? pandas still gets a compile-time error
-#    - pip install .
-#    - pip install .[test]
+  - python: 3.9-dev  # very slow, 13 minutes to fail
+    install:
+    - pip install git+https://github.com/wumpus/pandas.git@1.1.x
+    - pip install .
+    - pip install .[test]
 #  - python: 3.8
 #    arch: s390x
   - name: "OSX"
