--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ python:
   - 3.6
   - 3.7
   - 3.8
-#  - 3.9-dev  # 13 minutes to fail, pandas compile error
+  - 3.9
 #  - nightly
 
 matrix:
   fast_finish: true
   allow_failures:
-  - python: 3.9-dev
+  - python: 3.9
   - python: nightly
   - python: 3.8
     arch: arm64
@@ -29,25 +29,19 @@ matrix:
       - pip3 install .
       - pip3 install .[test]
   include:
-#  - python: 3.8  # very slow, 38 minutes to pass
-#    arch: arm64
-  - python: 3.9-dev  # very slow, 13 minutes to fail
-    install:
-    - pip install Cython==3.0a6  # needs 3 for py3.9
-    - pip install git+https://github.com/wumpus/pandas.git@1.1.x
-    - pip install .
-    - pip install .[test]
 #  - python: 3.8
-#    arch: s390x
-  - name: "OSX"
-    os: osx
-    osx_image: xcode12  # 10.15.5
-    language: shell
-    install:
-      # for osx we can't say "python: 3.8" so we use the system python3
-      - python3 --version
-      - pip3 install .
-      - pip3 install .[test]
+#    arch: arm64  # very slow but passes as of 10/3/20, 38 minutes
+#  - python: 3.8
+#    arch: s390x  # iirc no pandas wheels for s390x
+#  - name: "OSX"  # passes as of 10/3/20, 1m17s to run, commented out for credits reasons
+#    os: osx
+#    osx_image: xcode12  # 10.15.5
+#    language: shell
+#    install:
+#      # for osx we can't say "python: 3.8" so we use the system python3
+#      - python3 --version
+#      - pip3 install .
+#      - pip3 install .[test]
 
 git:
   depth: 99999
