--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
 
     - script: |
         python -m pip install --upgrade pip
-        pip install . .[test]
+        pip --use-feature=in-tree-build install . .[test]
       displayName: 'Install dependencies'
 
     - script: |
@@ -58,7 +58,7 @@ jobs:
 
     - script: |
         python -m pip install --upgrade pip
-        pip install . .[test]
+        pip --use-feature=in-tree-build install . .[test]
       displayName: 'Install dependencies'
 
     - script: |
