azure is somehow unhappy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
 
     - script: |
         python -m pip install --upgrade pip
-        pip --use-feature=in-tree-build install . .[test]
+        pip install . .[test]
       displayName: 'Install dependencies'
 
     - script: |
@@ -60,7 +60,7 @@ jobs:
 
     - script: |
         python -m pip install --upgrade pip
-        pip --use-feature=in-tree-build install . .[test]
+        pip install . .[test]
       displayName: 'Install dependencies'
 
     - script: |
