--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,8 @@ jobs:
           python.version: '3.10'
         Python311:
           python.version: '3.11'
+        Python312:
+          python.version: '3.12.0-alpha.3'
 
     steps:
     - task: UsePythonVersion@0
